# data_engineering_coder_house

./: .gitignore  .pre-commit-config.yaml  README.md  pipeline_napster_pandas.ipynb  pyproject.toml
entregable_uno/: .env.example  README.md  entrega_1.excalidraw  pipeline_napster_pandas.ipynb  pipeline_napster_spark.ipynb
entregable_uno/images/: artist_table.drawio
